examples/test/testpolicy8376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8376
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key28: value15
      key33: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value39
          key42: value11
          key17: value2
      podSelector:
        matchLabels:
          key41: value44
